--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,8 @@
         <title>Hello!</title>
     </head>
     <body>
-<<<<<<< HEAD
         <h1>Welcome to my website!!</h1>
-=======
-        <h1 style: "color:blue;">Welcome to my website!</h1>
->>>>>>> 72ad2b724540e83f1929622bb22078dc25369b03
+        <h1 style="color: blue;">Welcome to my website!</h1>
         <h2>Hello!</h2>
         Hello World!
     </body>
